// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lang.md 1`] = `
\`\`\`js
console.log("hello world");
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`js
console.log("hello world");
\`\`\`

`;

exports[`simple.md 1`] = `
\`\`\`
hello world
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`
hello world
\`\`\`

`;
